# Fapello.Downloader

./: README.md  pyproject.toml
fapello_downloader/: __main__.py  consts.py  requests_handler.py  utils.py
fapello_downloader/app/: actions.py  core.py  gui.py
fapello_downloader/app/gui/: base.py  consts.py  message_box.py
